--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularShoppingCart</title>
+  <title>E-SPARE</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://e7.pngegg.com/pngimages/982/467/png-clipart-shopping-cart-software-online-shopping-computer-icons-shopping-logo-design-love-retail.png">
 </head>
 <body>
   <app-root></app-root>
